2012-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug3521024.c:
	  Regression test for bug #3521024.

2012-05-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Use non-destructive bit tests when possible
	  (rfe #3526285). Fixed loss of association between generated
	  assembly and iCodes.
	* src/hc08/peeph.def: Additional rules for conditional branches and
	  to remove unused labels.

2012-05-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/Makefile.in: renamed test-z80 and test-gbz80 to test-rr...
	* support/regression/ports/gbz80,
	* support/regression/ports/rrgbz80: renamed to rrgbz80
	* support/regression/ports/z80,
	* support/regression/ports/rrz80: renamed to rrz80
	* support/regression/tests/gcc-torture-execute-921013-1.c: disabled for xstack

2012-05-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genAnd): added forgotten ifx->generated = TRUE

2012-05-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/gcc-torture-execute-961017-2.c: use less loops to
	  reduce test time

2012-05-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/hc08.src/hc08.cc,
	* sim/ucsim/hc08.src/inst.cc: Fixed simulation of brset/brclr. Keep
	  track of instruction cycle times.
	* src/hc08/gen.c (genAnd): Use brset/brclr where possible

2012-05-14 Leland Morrison <enigmalee AT sourceforge.net>

	* sim/ucsim/stypes.h,
	* sim/ucsim/globals.cc: add R3KA (rabbit 3000A) processor type
	* sim/ucsim/z80.src/r2k.cc,
	* sim/ucsim/z80.src/simz80.cc: added initialization code for R3KA support
	* sim/ucsim/z80.src/r2kcl.h,
	* sim/ucsim/z80.src/inst_ed_r2k.cc: support for r3ka instructions
	* sim/ucsim/z80.src/inst_ed.cc: change to allow overloading of inst_ed_
	
2012-05-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: correct some dry run costs, update genDivOneByte()